--- a/Denarius.Application/Denarius.Application.csproj
+++ b/Denarius.Application/Denarius.Application.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Auth\" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Denarius.Domain\Denarius.Domain.csproj" />
   </ItemGroup>
 
 </Project>
