--- a/Denarius.Web/Denarius.Web.csproj
+++ b/Denarius.Web/Denarius.Web.csproj
@@ -8,6 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Denarius.Application\Denarius.Application.csproj" />
+    <ProjectReference Include="..\Denarius.Infrastructure\Denarius.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
