--- a/web/package.json
+++ b/web/package.json
@@ -4,8 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:dev": "npm run start -- --configuration development",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "watch": "npm run build -- --watch --configuration development",
     "test": "ng test"
   },
   "prettier": {
